--- a/magic/magic.tex
+++ b/magic/magic.tex
@@ -76,19 +76,24 @@ Prirejeno iz virov:
 \end{definicija}
 
 Primer magičnega kvadrata reda 3 je prikazan v tabeli ?!?.
+\begin{table}[]
+   \centering
+   \caption{Magični kvadrat reda 3}
+   \label{table:mag3}
+  \begin{tabular}
+   {|c|c|c|}\hline
+   8 & 1 & 6 \\\hline
+   3 & 5 & 7 \\\hline
+   4 & 9 & 2 \\\hline
+   \end{tabular}
+\end{table}
 
-% - napis nad tabelo: Magični kvadrat reda 3
-% - oznaka: table:mag3
-% Začetek magičnega kvadrata
-%   8 & 1 & 6 \\\hline
-%   3 & 5 & 7 \\\hline
-%   4 & 9 & 2 \\\hline
-% Konec magičnega kvadrata
+
 
 \begin{definicija}
    Magični kvadrat reda $n$ je \emph{normalen}, če v njem nastopajo števila
    \begin{equation}
-      % oznaka: eq:numbers
+   \label{eq:numbers}
       1, 2, 3, \ldots, n^2-1, n^2.
    \end{equation}
 \end{definicija}
@@ -112,14 +117,18 @@ da je bila vsota števil v katerikoli vrstici, kateremkoli stolpcu in na obeh
 glavnih diagonalah enaka: 15. To število je tudi enako številu dni v 24 ciklih
 kitajskega sončnega leta. Ta vzorec so na določen način uporabljali upravljalci
 reke.
+\begin{table}
+   \centering
+   \caption{Kvadrat Lo Shu}
+   \label{table:loshu}
+  \begin{tabular}
+   {|c|c|c|}\hline
+   4 & 9 & 2 \\\hline
+   3 & 5 & 7 \\\hline
+   8 & 1 & 6 \\\hline
+  \end{tabular}
+\end{table}
 
-% - napis nad tabelo: Kvadrat Lo Shu
-% - oznaka: table:loshu
-% Začetek magičnega kvadrata
-%   4 & 9 & 2 \\\hline
-%   3 & 5 & 7 \\\hline
-%   8 & 1 & 6 \\\hline
-% Konec magičnega kvadrata
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -134,13 +143,18 @@ izogib boleznim.
 obliki magičnega kvadrata reda 3. Ta je v bistvu enak kot kvadrat
 Lo Shu, vendar je vsako število povečano za 19.
 
-% - napis nad tabelo: Kvadrat Kubera-Kolam
-% - oznaka: table:kubera
-% Konec magičnega kvadrata
-%   23 & 28 & 21 \\\hline
-%   22 & 24 & 26 \\\hline
-%   27 & 20 & 25 \\\hline
-% Konec magičnega kvadrata
+\begin{table}
+   \centering
+   \caption{Kvadrat Kubera-Kolam}
+   \label{table:kubera}
+  \begin{tabular}
+   {|c|c|c|}\hline
+   22 & 28 & 21 \\\hline
+   21 & 24 & 26 \\\hline
+   27 & 20 & 25 \\\hline
+  \end{tabular}
+\end{table}
+
 
 Z magičnimi kvadrati so se ukvarjali tudi najbolj znani matematiki kot na
 primer Euler, glej \cite{euler}. % ključ: euler
@@ -177,13 +191,18 @@ v štirih kotih, v štirih sosedih kotov v smeri urinega kazalca ($3+8+14+9$), v
 štirih sosedih kotov v nasprotni smeri urinega kazalca ($2+5+15+12$), v dveh naborih
 simetričnih parov ($2+8+9+15$ in $3+5+12+14$), in še na nekaj drugih načinov.
 Števili na sredini spodnje vrstici tvorita letnico litografije: 1514.
-%
-% - napis nad tabelo: Dürerjev magični kvadrat $4\times 4$
-% - oznaka: table:durer
-%   16 &  3 &  2 & 13 \\\hline
-%    5 & 10 & 11 &  8 \\\hline
-%    9 &  6 &  7 & 12 \\\hline
-%    4 & 15 & 14 &  1 \\\hline
+\begin{table}[]
+   \centering
+   \caption{Dürerjev magični kvadrat $4\times 4$}
+   \label{table:durer}
+  \begin{tabular}
+   {|c|c|c|c|}\hline
+   16 &  3 &  2 & 13 \\\hline
+    5 & 10 & 11 &  8 \\\hline
+    9 &  6 &  7 & 12 \\\hline
+    4 & 15 & 14 &  1 \\\hline
+  \end{tabular}
+\end{table}
 
 Pasijonska fasada na katedrali Sagrada família v Barceloni
 (glej sliko ?? za fotografijo) vsebuje magični kvadrat reda 4.
@@ -203,7 +222,17 @@ Vsota števil v vrsticah, stolpcih oziroma na diagonalah je 33 -- Jezusova staro
 v času pasijona. Strukturno je kvadrat podoben Dürerjevemu, vendar so števila
 v štirih poljih zmanjšana za 1. Posledica je, da sta števili 10 in 14 podvojeni
 in zato kvadrat ni normalen.
-%
+\begin{table}[]
+   \centering
+   \caption{Magični kvadrat na fasadi Sagrada Família}
+   \label{table:sagrada}
+  \begin{tabular}
+   {|c|c|c|c|}\hline
+   16 &  2 &  3 & 12 \\\hline
+    5 & 11 & 10 &  7 \\\hline
+    9 &  6 &  7 & 11 \\\hline
+    4 & 15 & 14 &  1 \\\hline
+  \end{tabular}
 % - napis nad tabelo: Pasijonska fasada, Sagrada Família
 % - oznaka: table:sagrada
 %    1 & 14 & 14 &  4 \\\hline
@@ -251,7 +280,16 @@ Kvadratu v tabeli ?!? ustrezata konstanti $A=20$ in $D=1$.
 
 Na primer, magičnemu kvadratu Lo Shu (glej tabelo ?!?) priredimo
 komplementarni kvadrat, prikazan v tabeli ?!?.
-%
+\begin{table}[]
+   \centering
+   \caption{Komplementarni kvadrat Lo Shu}
+   \label{ttable:closhu}
+  \begin{tabular}
+   {|c|c|c|}\hline
+   7 & 6 & 11 \\\hline
+   12 & 10 & 8 \\\hline
+   9 & 2 & 13 \\\hline
+  \end{tabular}
 
    
 % - napis nad tabelo: Kvadratu Lo Shu komplementarni kvadrat
@@ -305,20 +343,33 @@ sta za oceno uporabila simulacijo Monte Carlo in metode statistične mehanike.
 
 \section{Primeri}
 
-V tabelah ?!?, ?!? in ?!? so prikazani
+V tabelah \cite{mag5}, ?!? in ?!? so prikazani
 magični kvadrati redov 5, 6 in 9.
 \begin{table}
    \centering
    \caption{Magični kvadrat reda 5}
    \label{table:mag5}
   \begin{tabular}
-% - napis nad tabelo: Magični kvadrat reda 5
-% - oznaka: table:mag5
-%   17 & 24 &  1 &  8 & 15 \\\hline
-%   23 &  5 &  7 & 14 & 16 \\\hline
-%    4 &  6 & 13 & 20 & 22 \\\hline
-%   10 & 12 & 19 & 21 &  3 \\\hline
-%   11 & 18 & 25 &  2 &  9 \\\hline
+   {|c|c|c|c|c|}\hline
+   19 &  1 & 15 & 14 & 11 \\\hline
+   10 & 12 &  8 &  7 & 18 \\\hline
+   25 & 24 & 20 & 16 &  5 \\\hline
+    4 &  3 & 22 & 21 & 13 \\\hline
+    6 & 17 &  2 &  9 & 23 \\\hline
+  \end{tabular}
+\end{table}
+\begin{table}
+   \centering
+   \caption{Magični kvadrat reda 6}
+   \label{table:mag6}
+  \begin{tabular}
+   {|c|c|c|c|c|c|}\hline
+    6 & 32 &  3 & 34 & 35 &  1 \\\hline
+    7 & 11 & 27 & 28 &  8 & 30 \\\hline
+   19 & 14 & 16 & 15 & 23 & 24 \\\hline
+   18 & 20 & 22 & 21 & 17 & 13 \\\hline
+   25 & 29 & 10 &  9 & 26 & 12 \\\hline
+   36 &  5 & 33 &  4 &  2 & 31 \\\hline
   \end{tabular}
 \end{table}
 % - napis nad tabelo: Magični kvadrat reda 6
@@ -329,7 +380,25 @@ magični kvadrati redov 5, 6 in 9.
 %   18 & 20 & 22 & 21 & 17 & 13 \\\hline
 %   25 & 29 & 10 &  9 & 26 & 12 \\\hline
 %   36 &  5 & 33 &  4 &  2 & 31 \\\hline
+\begin{table}
+   \centering
+   \caption{Magični kvadrat reda 9}
+   \label{table:mag9}
+  \begin{tabular}
+   {|c|c|c|c|c|c|c|c|c|}\hline
+   47 & 58 & 69 & 80 &  1 & 12 & 23 & 34 & 45 \\\hline
+   57 & 68 & 79 &  9 & 11 & 22 & 33 & 44 & 46 \\\hline
+   67 & 78 &  8 & 10 & 21 & 32 & 43 & 54 & 56 \\\hline
+   77 &  7 & 18 & 20 & 31 & 42 & 53 & 55 & 66 \\\hline
+    6 & 17 & 19 & 30 & 41 & 52 & 63 & 65 & 76 \\\hline
+   16 & 27 & 29 & 40 & 51 & 62 & 64 & 75 &  5 \\\hline
+   26 & 28 & 39 & 50 & 61 & 72 & 74 &  4 & 15 \\\hline
+   36 & 38 & 49 & 60 & 71 & 73 &  3 & 14 & 25 \\\hline
+   37 & 48 & 59 & 70 & 81 &
 
+    2 & 13 & 24 & 35 \\\hline
+  \end{tabular}
+\end{table}
 % - napis nad tabelo: Magični kvadrat reda 9
 % - oznaka: table:mag9
 %   47 & 58 & 69 & 80 &  1 & 12 & 23 & 34 & 45 \\\hline
