--- a/08-prosojnice/prosojnice.tex
+++ b/08-prosojnice/prosojnice.tex
@@ -8,6 +8,8 @@
 % Namig: z iskanjem po datotekah (Ctrl+Shift+F oz. Cmd+Shift+F) 
 % poiščite niz `{definicija}' ali niz `{izrek}'.
 \usepackage{amsmath}
+\usepackage{amsmath}
+\usepackage{amsfonts}
 \theoremstyle{definition}
 \newtheorem{definicija}{Definicija}
 \theoremstyle{plain}
