--- a/magic/magic.tex
+++ b/magic/magic.tex
@@ -315,8 +315,7 @@ iz kvadrata Lo Shu z zrcaljenjem preko sredinske vodoravne črte.
 % - napis nad tabelo: Število različnih normalnih magičnih kvadratov
 % - oznaka: table:stevila
 % Začetek tabele
-\begin{table}[]
-   \centering
+\begin{table}
    \label{table:stevila}
    \caption{Število različnih normalnih magičnih kvadratov}
    \begin{tabular}{lcccccc}
@@ -394,9 +393,7 @@ magični kvadrati redov 5, 6 in 9.
    16 & 27 & 29 & 40 & 51 & 62 & 64 & 75 &  5 \\\hline
    26 & 28 & 39 & 50 & 61 & 72 & 74 &  4 & 15 \\\hline
    36 & 38 & 49 & 60 & 71 & 73 &  3 & 14 & 25 \\\hline
-   37 & 48 & 59 & 70 & 81 &
-
-    2 & 13 & 24 & 35 \\\hline
+   37 & 48 & 59 & 70 & 81 &  2 & 13 & 24 & 35 \\\hline
   \end{tabular}
 \end{table}
 % - napis nad tabelo: Magični kvadrat reda 9
