--- a/08-prosojnice/prosojnice/3-analiza-logika-mnozice.tex
+++ b/08-prosojnice/prosojnice/3-analiza-logika-mnozice.tex
@@ -1,9 +1,13 @@
 \begin{frame}{Logika in množice}
 	\begin{enumerate}
 		\item
-		Poišči preneksno obliko formule ??.
+		Poišči preneksno obliko formule 
+		\(
+		\displaystyle
+		\exists x: P(x) \land \forall x : Q(x) \implies \forall x : R(x)
+		\).
 		\item 
-		Definiramo množici ?? in ??.
+		Definiramo množici \(A = [2,5]\) in \(B=\{0,1,2,3,4,\dots \}\).
 		V ravnino nariši:
 		\begin{enumerate}
 		   \item ??
@@ -40,8 +44,10 @@
 		% ampak v prikaznem slogu. To naredite tako, da v matematičnem načinu najprej
 		% uporabite ukaz displaystyle.
 		% Pred dx je presledek: pravi ukaz je \,
-		??
-		% \frac{2+\sqrt{x+1}}{(x+1)^2-\sqrt{x+1}} 
+		\(
+		\displaystyle
+		\int \frac{2+\sqrt{x+1}}{(x+1)^2-\sqrt{x+1}} \, dx
+		\)
 		\item 
 		Naj bo $g$ zvezna funkcija. Ali posplošeni integral 
 		??
