--- a/magic/magic.tex
+++ b/magic/magic.tex
@@ -233,6 +233,7 @@ in zato kvadrat ni normalen.
     9 &  6 &  7 & 11 \\\hline
     4 & 15 & 14 &  1 \\\hline
   \end{tabular}
+\end{table} 
 % - napis nad tabelo: Pasijonska fasada, Sagrada Família
 % - oznaka: table:sagrada
 %    1 & 14 & 14 &  4 \\\hline
@@ -280,16 +281,17 @@ Kvadratu v tabeli ?!? ustrezata konstanti $A=20$ in $D=1$.
 
 Na primer, magičnemu kvadratu Lo Shu (glej tabelo ?!?) priredimo
 komplementarni kvadrat, prikazan v tabeli ?!?.
-\begin{table}[]
+\begin{table}
    \centering
    \caption{Komplementarni kvadrat Lo Shu}
-   \label{ttable:closhu}
+   \label{table:closhu}
   \begin{tabular}
    {|c|c|c|}\hline
    7 & 6 & 11 \\\hline
    12 & 10 & 8 \\\hline
    9 & 2 & 13 \\\hline
   \end{tabular}
+\end{table}
 
    
 % - napis nad tabelo: Kvadratu Lo Shu komplementarni kvadrat
@@ -316,6 +318,7 @@ iz kvadrata Lo Shu z zrcaljenjem preko sredinske vodoravne črte.
 % - oznaka: table:stevila
 % Začetek tabele
 \begin{table}
+   \centering
    \label{table:stevila}
    \caption{Število različnih normalnih magičnih kvadratov}
    \begin{tabular}{lcccccc}
@@ -414,8 +417,8 @@ magični kvadrati redov 5, 6 in 9.
 
 
 % Tu vstavite bibliografijo
-\bibliography{magic.bib}
 \bibliographystyle{siam}
+\bibliography{magic.bib}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
