--- a/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
+++ b/08-prosojnice/prosojnice/2-paketa-amsmath-amsfonts.tex
@@ -52,10 +52,10 @@
 	% Oblikujte spodnje enačbe z ustreznim okoljem,
 	% da bo enačba oblikovana kot v rešitvah.
 	Poišči vse rešitve enačbe
-	\[
-	(1+x+x^2) \cdot (1+x+x^2+x^3+\ldots+x^9+x^{10}) = 
+	\begin{multline*}
+	(1+x+x^2) \cdot (1+x+x^2+x^3+\ldots+x^9+x^{10}) = \\ 
 	=(1+x+x^2+x^3+x^4+x^5+x^6)^2.
-	\]
+	\end{multline*}
 \end{frame}
 
 \begin{frame}{Okolje \texttt{cases}}
@@ -63,8 +63,14 @@
 	% Oblikujte spodnji funkcijski predpis z ustreznim okoljem,
 	% da oblikovan kot v rešitvah.
 	Dana je funkcija
-	
-		% \frac{3x^2y-y^3}{x^2+y^2}
+	\[
+	f(x,y) = 
+	\begin{cases}
+		 \frac{3x^2y-y^3}{x^2+y^2}; & \text{če } (x,y) \neq (0,0), \\[6pt]
+		 0; & \text{če } (x,y) = (0,0).
+	\end{cases}
+	\]
+		
 		
 	\begin{itemize}
 		% ukaz displaystyle preklopi v prikazni način v vrstici. 
